--- a/Backend/RealManager/RealManager/appsettings.json
+++ b/Backend/RealManager/RealManager/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoRepository": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "real_manager_dev"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
