--- a/Backend/RealManager/RealManager.Services/RealManager.Services.csproj
+++ b/Backend/RealManager/RealManager.Services/RealManager.Services.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RealManager.Domain\RealManager.Domain.csproj" />
     <ProjectReference Include="..\RealManager.Repositories\RealManager.Repositories.csproj" />
     <ProjectReference Include="..\RealManager.Shared\RealManager.Shared.csproj" />
