Add props to appsettings

--- a/Backend/RealManager/RealManager/appsettings.Development.json
+++ b/Backend/RealManager/RealManager/appsettings.Development.json
@@ -1,9 +1,17 @@
 {
+  "MongoRepository": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "real_manager_dev"
+  },
+  "ConnectionStrings": {
+    "SqlServerDatabase": ""
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
