--- a/Backend/RealManager/RealManager/appsettings.json
+++ b/Backend/RealManager/RealManager/appsettings.json
@@ -3,6 +3,9 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "real_manager_dev"
   },
+  "ConnectionStrings": {
+    "SqlServerDatabase": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
