--- a/Frontend/real-manager/package.json
+++ b/Frontend/real-manager/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "~8.2.8",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
-    "serialize-javascript": "2.1.1",
+    "serialize-javascript": "@^2.1.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "minimist": "@^1.2.2",
+    "acorn": "@^7.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.6",
