--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,14 +23,14 @@
     "@angular/router": "~8.2.8",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
-    "serialize-javascript": "@^2.1.1",
+    "serialize-javascript": "^2.1.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
-    "minimist": "@^1.2.2",
-    "acorn": "@^7.1.1"
+    "minimist": "^1.2.2",
+    "acorn": "^7.1.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.6",
+    "@angular-devkit/build-angular": "^0.901.0",
     "@angular/cli": "~8.3.6",
     "@angular/compiler-cli": "~8.2.8",
     "@angular/language-service": "~8.2.8",
@@ -40,7 +40,7 @@
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
