Connect the front end applicatino with the backend application

--- a/Backend/RealManager/appsettings.json
+++ b/Backend/RealManager/appsettings.json
@@ -4,7 +4,7 @@
     "DatabaseName": "real_manager_dev"
   },
   "ConnectionStrings": {
-    "SqlServerDatabase": ""
+    "SqlServerDatabase": "Server=localhost\\SQLEXPRESS;Database=realmanagerdev;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
