Add authentication to the whole application

--- a/Backend/RealManager/appsettings.json
+++ b/Backend/RealManager/appsettings.json
@@ -13,5 +13,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppSettings": {
+    "Secret": "asdaasd98as7(*&(ASD&SAOIDA(*SD&SAOIDUASD0"
+  },
   "AllowedHosts": "*"
 }
