--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,17 +18,18 @@
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "^9.1.7",
     "@angular/material": "^8.2.1",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "acorn": "^7.1.1",
     "hammerjs": "^2.0.8",
+    "minimist": "^1.2.2",
     "rxjs": "~6.5.5",
     "serialize-javascript": "^2.1.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "minimist": "^1.2.2",
-    "acorn": "^7.1.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
