--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,6 +36,9 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
+    "@stryker-mutator/core": "^3.3.0",
+    "@stryker-mutator/karma-runner": "^3.3.0",
+    "@stryker-mutator/typescript": "^3.3.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
