--- a/BackendNode/package.json
+++ b/BackendNode/package.json
@@ -10,6 +10,7 @@
   "author": "Artur Quirino",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "dotenv-safe": "^8.2.0",
