--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "dev:ssr": "ng run real-manager:serve-ssr",
+    "serve:ssr": "node dist/real-manager/server/main.js",
+    "build:ssr": "ng build --prod && ng run real-manager:server:production",
+    "prerender": "ng run real-manager:prerender"
   },
   "private": true,
   "dependencies": {
@@ -22,8 +26,11 @@
     "@angular/material": "^8.2.1",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
+    "@angular/platform-server": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@nguniversal/express-engine": "^9.1.1",
     "acorn": "^7.1.1",
+    "express": "^4.15.2",
     "hammerjs": "^2.0.8",
     "minimist": "^1.2.2",
     "rxjs": "~6.5.5",
@@ -36,9 +43,11 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
+    "@nguniversal/builders": "^9.1.1",
     "@stryker-mutator/core": "^3.3.0",
     "@stryker-mutator/karma-runner": "^3.3.0",
     "@stryker-mutator/typescript": "^3.3.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
