--- a/BackendNode/package.json
+++ b/BackendNode/package.json
@@ -16,7 +16,8 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.5.9"
+    "mongodb": "^3.5.9",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
