--- a/BackendNode/package.json
+++ b/BackendNode/package.json
@@ -20,6 +20,8 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.4"
   }
 }
